--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header fixed-header">
         <div class="flex-container">
             <div class="naslov" style="order: 2">
-                <a id="no-under" href="website.html" title="plus381Robotics"> <p>plus381Robotics</p></a>
+                <a id="no-under" href="index.html" title="plus381Robotics"> <p>plus381Robotics</p></a>
                 
             </div>
             <div class="logo" style="order: 1">
