--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 
             </div>
             <div class="logo" style="order: 1">
-                <a href="website.html" title="plus381Robotics"> 
+                <a href="index.html" title="plus381Robotics"> 
                     <img src="images\plus381 logo.png" alt="plus381Robotics">
                 </a>
             </div>
