--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header class="main-header fixed-header">
         <div class="flex-container">
             <div class="naslov" style="order: 2">
-                <a id="no-under" href="index.html" title="plus381Robotics"> <p>plus381Robotics</p></a>
+                <a id="no-under" href="https://www.plus381robotics.com/" title="plus381Robotics"> <p>plus381Robotics</p></a>
                 
             </div>
             <div class="logo" style="order: 1">
-                <a href="index.html" title="plus381Robotics"> 
+                <a href="https://www.plus381robotics.com/" title="plus381Robotics"> 
                     <img src="images\plus381 logo.png" alt="plus381Robotics">
                 </a>
             </div>
@@ -73,7 +73,7 @@
                     <a href="https://generalsolutions.rs/"><img src="images\General Solutions logo.png" alt="GeneralSolutions"></a>
                     <a href="https://www.mikroe.com/"><img src="images\mikroe-logo.png" alt="MIKROE"></a>
                     <a href="https://gat.co.rs/"><img src="images\Gat.jpg" alt="GAT d.o.o"></a>
-                    <a href="https://www.miocompany.rs/"><img src="images\cropped-logo-mio-company-doo-–-kopija.png" alt="MIO Company"></a>
+                    <a href="https://www.miocompany.rs/"><img src="images\cropped-logo-mio-company-dookopija.png" alt="MIO Company"></a>
                     <a href="https://www.schrack.rs/"><img src="images\schrack_logo_RGB_300dpi_v2.png" alt="Schrack Technik"></a>
                     <a href="https://www.avantech-qms.com/"><img src="images\Avantech Electronics logo.jpg" alt="Avantech Electronics"></a>
                     <a href="https://gelex.rs/"><img src="images\gelex2.jpeg" alt="Gelex"></a>                
@@ -93,7 +93,7 @@
         </section>
     </main>
 
-    <footer class="main-footer flex-container">
+    <footer class="main-footer flex-container ">
         
 
         <div class="container main-footer-container">
