--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
         <section class="container para-color section">
             <section id="about">
                 <h2>About Us</h2>
-                <p>Welcome to our robotics team page! We are a passionate group of engineers and enthusiasts dedicated to exploring the world of robotics. Our mission is to design, build and innovate robots for European competition <a href="https://www.eurobot.org/">Eurobot.</a> The main goal is to support students in creating and designing robots while following trends and implementing new technologies. Throughout our 3 years of work we gained support from  the Faculty of Technical Sciences in Novi Sad and several companies who were providing assistance.</p>
-                <!-- <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/CrYGzZOtV_r/?img_index=1">
-                    <a href="https://www.instagram.com/p/CrYGzZOtV_r/?img_index=1">View this post on Instagram</a>
-                </blockquote>
-                <script async src="/www.instagram.com/embed.js"></script> -->
+                <div>
+                    <p>Welcome to our robotics team page! We are a passionate group of engineers and enthusiasts dedicated to exploring the world of robotics. Our mission is to design, build and innovate robots for European competition <a href="https://www.eurobot.org/">Eurobot.</a> The main goal is to support students in creating and designing robots while following trends and implementing new technologies. Throughout our 3 years of work we gained support from  the Faculty of Technical Sciences in Novi Sad and several companies who were providing assistance.</p>
+                </div>
 
                 
                 
@@ -45,21 +43,23 @@
 
             <section id="projects" class="triumphs triumphs-div2 triumphs-div3 ">
                 <h2>Triumphs</h2>
-                <ul>
-                    <li>🏆2nd place on Eurobot Serbia 2022, Novi Sad</li>
-                    <li>11th place on Eurobot 2022, La Roche-sur-Yon</li>
-                    <li>🏆3rd place on Eurobot Serbia 2023, Novi Sad</li>
-                    <li>16th place on Eurobot 2023, La Roche-sur-Yon</li>
-                </ul>
+                <div class="centered-list">
+                    <ul>
+                        <li>🏆2nd place on Eurobot Serbia 2022, Novi Sad</li>
+                        <li>11th place on Eurobot 2022, La Roche-sur-Yon</li>
+                        <li>🏆3rd place on Eurobot Serbia 2023, Novi Sad</li>
+                        <li>16th place on Eurobot 2023, La Roche-sur-Yon</li>
+                    </ul>
+                </div>
                 <div1>
                     <div2>
                         <a title="2nd place on Eurobot Serbia 2022"> 
-                            <img height="400" width="460"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
+                            <img style="max-width: 50%;height: auto;padding-bottom: 30px;"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
                         </a>
                     </div2>
                     <div3>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img height="400" width="350" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: 40%;height: auto;" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
                     </div3>
                 </div1>
@@ -83,7 +83,7 @@
 
             <section id="contact">
                 <h2>CONTACT US</h2>
-                <div>
+                <div  class="">
                     <p>If you have any questions or inquiries, feel free to reach out to us:</p>
                     <p>Follow Us: <a class="no-blue" href="https://www.instagram.com/plus381robotics/">Instagram</a></p>
                     <p>Email: <a class="no-blue" href="mailto:plus381robotics@gmail.com">plus381robotics@gmail.com</a></p>
