--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <div1>
                     <div2>
                         <a title="2nd place on Eurobot Serbia 2022"> 
-                            <img style="max-width: 50%;height: auto;padding-bottom: 30px;"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
+                            <img style="width: 50%;max-height: auto;padding-top: 25px; padding-bottom: 25px;"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
                         </a>
                     </div2>
                     <div3>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img style="max-width: 40%;height: auto;" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: 40%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
                     </div3>
                 </div1>
