--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
         </section>
     </main>
 
-    <footer class="main-footer flex-container ">
-        
-
-        <div class="container main-footer-container">
+    <footer class=" main-footer">
+        <div class="main-footer-container">
             <ul class="footer-nav">
                 <li><a href="https://www.instagram.com/plus381robotics/" target="_blank">
                     <img src="images\instagram_174855.png"></a>
