--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
+	<meta name="author" content="Kovach">
+	<meta name="robots" content="index, follow">
+	<meta property="og:title" content="plus381Robotics - Robotics Team">
+	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
+
     <title>plus381Robotics</title>
     <link rel="stylesheet" href="styles.css">
 </head>
