--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
+	<meta property="og:image" content="images\plus381 logo.png">
 	<meta property="og:title" content="plus381Robotics - Robotics Team">
 	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
 
@@ -13,7 +14,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="global-image">
+   	 <img src="images\plus381 logo.png" alt="Global Image Description">
+    </div>
     <header class="main-header fixed-header">
         <div class="flex-container">
             <div class="naslov" style="order: 2">
