--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
+	<meta name="msapplication-TileImage" content="images\plus381 logo.png">
+	<link rel="canonical" href="https://plus381robotics.com/">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://plus381robotics.com/">
+	<meta property="og:site_name" content="plus381robotics">
 	<meta property="og:image" content="images\plus381 logo.png">
 	<meta property="og:title" content="plus381Robotics - Robotics Team">
 	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
