--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
-	<meta name="msapplication-TileImage" content="images\plus381 logo.png">
+	<meta name="msapplication-TileImage" content="http://plus381robotics.com/images/plus381 logo.png">
 	<link rel="canonical" href="https://plus381robotics.com/">
+	
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://plus381robotics.com/">
 	<meta property="og:site_name" content="plus381robotics">
