--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
-	<meta name="msapplication-TileImage" content="http://plus381robotics.com/images/plus381 logo.png">
 	<link rel="canonical" href="https://plus381robotics.com/">
+
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://http(s)://www.plus381robotics.com/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://http(s)://www.plus381robotics.com/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="http://http(s)://www.plus381robotics.com/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="http://http(s)://www.plus381robotics.com/favicon-16x16.png" sizes="16x16" />
+	<meta name="application-name" content="plus381robotics"/>
+	<meta name="msapplication-TileColor" content="#FFFFFF" />
+	<meta name="msapplication-TileImage" content="http://http(s)://www.plus381robotics.com/mstile-144x144.png" />
+
 	
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://plus381robotics.com/">
