--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://plus381robotics.com/">
 
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://http(s)://www.plus381robotics.com/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://http(s)://www.plus381robotics.com/apple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="http://http(s)://www.plus381robotics.com/favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="http://http(s)://www.plus381robotics.com/favicon-16x16.png" sizes="16x16" />
-	<meta name="application-name" content="plus381robotics"/>
-	<meta name="msapplication-TileColor" content="#FFFFFF" />
-	<meta name="msapplication-TileImage" content="http://http(s)://www.plus381robotics.com/mstile-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.plus381robotics.com/images/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.plus381robotics.com/images/apple-touch-icon-152x152.png">
+	<link rel="icon" type="image/png" href="http://www.plus381robotics.com/images/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="http://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16">
+	<meta name="application-name" content="plus381robotics">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="http://www.plus381robotics.com/images/mstile-144x144.png">
 
 	
 	<meta property="og:type" content="website">
