--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://plus381robotics.com/">
-
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.plus381robotics.com/images/apple-touch-icon-144x144.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.plus381robotics.com/images/apple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="https://www.plus381robotics.com/images/favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="https://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16" />
+	<meta name="keywords" content="robot, plus, plus381, 381, robotics, +381, +381robotics, robot, plus381robot, +381robot">
 	<meta name="application-name" content="&nbsp;"/>
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="msapplication-TileImage" content="https://www.plus381robotics.com/images/mstile-144x144.png" />
-
-
-	
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://plus381robotics.com/">
 	<meta property="og:site_name" content="plus381robotics">
 	<meta property="og:title" content="plus381Robotics - Robotics Team">
 	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
 
-    <title>plus381Robotics</title>
+    <title>plus381Robotics - Eurobot competing team</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
