--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
 	<meta name="robots" content="index, follow">
+	<title plus381Robotics - Eurobot competing team /title>
 	<link rel="canonical" href="https://plus381robotics.com/">
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.plus381robotics.com/images/apple-touch-icon-144x144.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.plus381robotics.com/images/apple-touch-icon-152x152.png" />
@@ -21,7 +22,7 @@
 	<meta property="og:title" content="plus381Robotics - Robotics Team">
 	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
 
-    <title>plus381Robotics - Eurobot competing team</title>
+    <title plus381Robotics - Eurobot competing team /title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
