--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.plus381robotics.com/images/apple-touch-icon-152x152.png" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon.ico" />
 	<meta name="keywords" content="robot, plus, plus381, 381, robotics, +381, +381robotics, robot, plus381robot, +381robot">
 	<meta name="application-name" content="&nbsp;"/>
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
