--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> plus381Robotics - Eurobot competing team </title>
+	<title>plus381Robotics - Eurobot competing team</title>
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
-	<meta name="robots" content="index, follow">
+	<meta name="robots" content="index">
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.plus381robotics.com/images/apple-touch-icon-144x144.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.plus381robotics.com/images/apple-touch-icon-152x152.png" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16" />
