--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="canonical" href="https://www.plus381robotics.com/" />
 	<title>plus381Robotics - Eurobot competing team</title>
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
