--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="canonical" href="https://www.plus381robotics.com/" />
-	<title>plus381Robotics - Eurobot competing team</title>
 	<meta name="description" content="Welcome to plus381Robotics - a robotics team dedicated to innovation and robot design for Eurobot competitions.">
 	<meta name="author" content="Kovach">
-	<meta name="robots" content="index">
+	<meta name="robots" content="index, follow">
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.plus381robotics.com/images/apple-touch-icon-144x144.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.plus381robotics.com/images/apple-touch-icon-152x152.png" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-16x16.png" sizes="16x16" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" type="image/x-icon" href="https://www.plus381robotics.com/images/favicon.ico" />
-	<meta name="keywords" content="robot, plus, plus381, 381, robotics, +381, +381robotics, robot, plus381robot, +381robot">
-	<meta name="application-name" content="&nbsp;"/>
+	<meta name="application-name" content="plus381robotics - Eurobot team"/>
 	<meta name="msapplication-TileColor" content="#FFFFFF" />
 	<meta name="msapplication-TileImage" content="https://www.plus381robotics.com/images/mstile-144x144.png" />
+	<title>plus381Robotics - Eurobot competing team</title>
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://plus381robotics.com/">
+	<meta property="og:image" content="https://plus381robotics.com/images/plus381 logo.png" />
 	<meta property="og:site_name" content="plus381robotics.com">
 	<meta property="og:title" content="plus381Robotics - Eurobot competing team">
 	<meta property="og:description" content="Exploring the world of robotics and innovating for Eurobot competitions.">
