--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                 </a>
             </div>
             <div class="flag" style="order: 3">
-                <img height="50" width="90"                src="images\1024px-Flag_of_Serbia.svg.png" alt="">
+                <img height="50" width="90"                src="images\1024px-Flag_of_Serbia.svg.png" alt="Serbia">
             </div>
             <div class="eurobot" style="order: 4">
-                <img height="50" width="90"                src="images\eurobot.png" alt="">
+		<a href="https://www.eurobot.org/" title="Eurobot"> 
+                    <img height="50" width="90"                src="images\eurobot.png" alt="Eurobot">
+                </a>      
             </div>
         </div>
        
