--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         <li>11th place on Eurobot 2022, La Roche-sur-Yon</li>
                         <li>🏆3rd place on Eurobot Serbia 2023, Novi Sad</li>
                         <li>13th place on Eurobot 2023, La Roche-sur-Yon</li>
+			<li>4th place on Eurobot Serbia 2024, Novi Sad</li>
                     </ul>
                 </div>
                 <div1>
