--- a/index.html
+++ b/index.html
@@ -80,9 +80,14 @@
                     </div2>
                     <div3>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img style="max-width: 40%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: 50%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
                     </div3>
+		    <div4>
+                        <a title="4th place on Eurobot Serbia 2024"> 
+                            <img style="max-width: 50%;height: auto" src="images\robot_2k24.png" alt="4th place on Eurobot Serbia 2024">
+                        </a>
+                    </div4>
                 </div1>
             </section>
 
