--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div3>
 		    <div4>
                         <a title="4th place on Eurobot Serbia 2024"> 
-                            <img style="max-width: 50%;height: auto" src="images\robot_2k24.png" alt="4th place on Eurobot Serbia 2024">
+                            <img style="max-width: 50%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
                         </a>
                     </div4>
                 </div1>
