--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<li>4th place on Eurobot Serbia 2024, Novi Sad</li>
                     </ul>
                 </div>
-                <div1 class="container image-grid-1">
+                <div1 class="image-grid-1">
                     <div2>
                         <a title="2nd place on Eurobot Serbia 2022"> 
                             <img style="width: 50%;max-height: auto;padding-top: 25px; padding-bottom: 25px;"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
