--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                 <div1 class="image-grid-1">
                     <div2>
                         <a title="2nd place on Eurobot Serbia 2022"> 
-                            <img style="width: 50%;max-height: auto;padding-top: 25px; padding-bottom: 25px;"  src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
+                            <img style="width: auto;max-height: auto" src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
                         </a>
                     </div2>
                     <div3>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img style="max-width: 50%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: auto;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
                     </div3>
 		    <div4>
                         <a title="4th place on Eurobot Serbia 2024"> 
-                            <img style="max-width: 50%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
+                            <img style="max-width: auto;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
                         </a>
                     </div4>
                 </div1>
