--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                             <img style="max-width: 70%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
                         </a>
                     </div4>
+		    <div4>
+                        <a title="SIMA_2k24"> 
+                            <img style="max-width: 70%;height: auto" src="images\sima_2k24.jpg" alt="SIMA_2k24">
+                        </a>
+                    </div4>
                 </div1>
             </section>
 
