--- a/index.html
+++ b/index.html
@@ -73,26 +73,26 @@
                     </ul>
                 </div>
                 <div1 class="container image-grid-1">
-                    <div2>
+                    <div>
                         <a title="2nd place on Eurobot Serbia 2022"> 
                             <img style="width: 70%;max-height: auto" src="images\WhatsApp Image 2023-11-04 at 21.51.49_f556b2aa.jpg" alt="2nd place on Eurobot Serbia 2022">
                         </a>
-                    </div2>
-                    <div3>
+                    </div>
+                    <div>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img style="max-width: 70%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: 80%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
-                    </div3>
-		    <div4>
+                    </div>
+		    <div>
                         <a title="4th place on Eurobot Serbia 2024"> 
-                            <img style="max-width: 70%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
+                            <img style="max-width: 80%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
                         </a>
-                    </div4>
-		    <div4>
+                    </div>
+		    <div>
                         <a title="SIMA_2k24"> 
                             <img style="max-width: 70%;height: auto" src="images\sima_2k24.jpg" alt="SIMA_2k24">
                         </a>
-                    </div4>
+                    </div>
                 </div1>
             </section>
 
