--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                     </div>
                     <div>
                         <a title="3rd place on Eurobot Serbia 2023"> 
-                            <img style="max-width: auto;height: 70%" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
+                            <img style="max-width: 70%;height: auto" src="images\roboti_2k23.png" alt="3rd place on Eurobot Serbia 2023">
                         </a>
                     </div>
 		    <div>
                         <a title="4th place on Eurobot Serbia 2024"> 
-                            <img style="max-width: auto;height: 70%" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
+                            <img style="max-width: 70%;height: auto" src="images\robot_2k24.jpg" alt="4th place on Eurobot Serbia 2024">
                         </a>
                     </div>
 		    <div>
