--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                             <img style="max-width: 100%;height: auto" src="images\sima_2k24.jpg" alt="SIMA_2k24">
                         </a>
                     </div>
+		    <div>
+                        <a title="ekipa_2k24"> 
+                            <img style="max-width: 100%;height: auto" src="images\ekipa_2k24.jpg" alt="ekipa_2k24">
+                        </a>
+                    </div>
                 </div1>
             </section>
 
