--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Fundamentals</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">History</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Sponsors</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -119,12 +119,6 @@
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/portfolio/6.jpg" alt="Third slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/portfolio/2.jpg" alt="Third slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/portfolio/8.jpg" alt="Third slide">
                             </div>
                             <div class="carousel-item">
                                 <img src="assets/img/portfolio/1.jpg" alt="Third slide">
